fix scrollbar?

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
 	display: flex;
 	justify-content: center;
 	width: 100%;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 #selector-wrapper {
@@ -72,7 +72,7 @@ body {
 	border-top-color: #C2995D;
 	background-color: rgba(0, 0, 0, 0.2);
 	border-radius: 0 0 8px 8px;
-	overflow-x: scroll;
+	overflow: auto;
 }
 
 .selector-button {
